[tool.poetry]
name = "shornel-finance-api"
version = "0.1.0"
description = ""
authors = ["Rey Halsall <reduhq25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
motor = "^3.4.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
