[tool.poetry]
name = "shornel-finance-api"
version = "0.1.0"
description = ""
authors = ["Rey Halsall <reduhq25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
motor = "^3.4.0"
uvicorn = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
